[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel", "setuptools-scm",]

[project]
name="asyncakumuli"
description="Write data to Akumuli"
classifiers = [
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Framework :: Trio",
]
dependencies = [
	"anyio >= 4",
	"httpx",
	"pytz",
]
dynamic = [ "version",]
keywords=["iot", "logging"]
requires-python = ">=3.10"
readme = "README.rst"

[project.urls]
homepage = "http://github.com/smurfix/asyncakumuli"

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[tool.setuptools_scm]

[tool.pytest]
filterwarnings = [ "error" ]
addopts = [ "-x" ]
log_cli_level = "DEBUG"
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 99
ignore = [ "F841", "F401", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203", "E501" ]
per-file-ignores = [ "distkv/command.py:F811" ]

